--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Affsyamf/belajar_npm#readme",
   "dependencies": {
+    "chalk": "^5.4.1",
     "validator": "^13.15.15"
   }
 }
